Fix gap between containers in productView and add back-button functionality

--- a/DAT250-auction/web/resources/css/layout.css
+++ b/DAT250-auction/web/resources/css/layout.css
@@ -44,7 +44,7 @@ body{
 .logo{
 }
 
-.sign-out, #backButton{
+.sign-out, .backButton{
     font-size: large;
     border-radius: 5%;
     color: white;
