--- a/DAT250-auction/web/resources/css/productView.css
+++ b/DAT250-auction/web/resources/css/productView.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     justify-content: center;
     width: 75vw;
+    background-color: transparent;
 }
 
 .outer-container {
